--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Menu</title>
+    <title>Training</title>
     <link rel="stylesheet" href="assets/fonts/fontawesome-free-6.1.1-web/css/all.min.css">
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/> 
@@ -24,12 +24,12 @@
                     </div>
                     <div class="nav-links">
                         <ul>
-                            <li><a href="">Home</a></li>
-                            <li><a href="">Pages</a></li>
-                            <li><a href="">Classes</a></li>
-                            <li><a href="">Portfolio</a></li>
-                            <li><a href="">Blog</a></li>
-                            <li><a href="">Contacts</a></li>                    
+                            <li><a href="#">Home</a></li>
+                            <li><a href="#">Pages</a></li>
+                            <li><a href="#">Classes</a></li>
+                            <li><a href="#">Portfolio</a></li>
+                            <li><a href="#">Blog</a></li>
+                            <li><a href="#">Contacts</a></li>                    
                         </ul>
                     </div>
                 </div>
@@ -112,9 +112,9 @@
             <div class="tab-bar">
                 <div class="container">
                     <ul>
-                        <li><a href=""><h5>Top Sellers</h5></a></li>
-                        <li><a href=""><h5>Featured</h5></a></li>
-                        <li><a href=""><h5>Most Reviews</h5></a></li>
+                        <li><a href="#"><h5>Top Sellers</h5></a></li>
+                        <li><a href="#"><h5>Featured</h5></a></li>
+                        <li><a href="#"><h5>Most Reviews</h5></a></li>
                     </ul>
                 </div>
             </div>
@@ -129,10 +129,10 @@
                     </div>
                     <div class="cart-right">
                         <ul class="icon-list">
-                            <li><a href=""><i class="fa-solid fa-basket-shopping"></i></a></li>
-                            <li><a href=""><i class="fa-solid fa-eye"></i></a></li>
-                            <li><a href=""><i class="fa-solid fa-heart"></i></a></li>
-                            <li><a href=""><i class="fa-solid fa-arrow-right-arrow-left"></i></a></li>
+                            <li><a href="#"><i class="fa-solid fa-basket-shopping"></i></a></li>
+                            <li><a href="#"><i class="fa-solid fa-eye"></i></a></li>
+                            <li><a href="#"><i class="fa-solid fa-heart"></i></a></li>
+                            <li><a href="#"><i class="fa-solid fa-arrow-right-arrow-left"></i></a></li>
                         </ul>
                     </div>
                 </div>
@@ -146,10 +146,10 @@
                     </div>
                     <div class="cart-right">
                         <ul class="icon-list">
-                            <li><a href=""><i class="fa-solid fa-basket-shopping"></i></a></li>
-                            <li><a href=""><i class="fa-solid fa-eye"></i></a></li>
-                            <li><a href=""><i class="fa-solid fa-heart"></i></a></li>
-                            <li><a href=""><i class="fa-solid fa-arrow-right-arrow-left"></i></a></li>
+                            <li><a href="#"><i class="fa-solid fa-basket-shopping"></i></a></li>
+                            <li><a href="#"><i class="fa-solid fa-eye"></i></a></li>
+                            <li><a href="#"><i class="fa-solid fa-heart"></i></a></li>
+                            <li><a href="#"><i class="fa-solid fa-arrow-right-arrow-left"></i></a></li>
                         </ul>
                     </div>
                 </div>
@@ -163,10 +163,10 @@
                     </div>
                     <div class="cart-right">
                         <ul class="icon-list">
-                            <li><a href=""><i class="fa-solid fa-basket-shopping"></i></a></li>
-                            <li><a href=""><i class="fa-solid fa-eye"></i></a></li>
-                            <li><a href=""><i class="fa-solid fa-heart"></i></a></li>
-                            <li><a href=""><i class="fa-solid fa-arrow-right-arrow-left"></i></a></li>
+                            <li><a href="#"><i class="fa-solid fa-basket-shopping"></i></a></li>
+                            <li><a href="#"><i class="fa-solid fa-eye"></i></a></li>
+                            <li><a href="#"><i class="fa-solid fa-heart"></i></a></li>
+                            <li><a href="#"><i class="fa-solid fa-arrow-right-arrow-left"></i></a></li>
                         </ul>
                     </div>
                 </div>
@@ -180,10 +180,10 @@
                     </div>
                     <div class="cart-right">
                         <ul class="icon-list">
-                            <li><a href=""><i class="fa-solid fa-basket-shopping"></i></a></li>
-                            <li><a href=""><i class="fa-solid fa-eye"></i></a></li>
-                            <li><a href=""><i class="fa-solid fa-heart"></i></a></li>
-                            <li><a href=""><i class="fa-solid fa-arrow-right-arrow-left"></i></a></li>
+                            <li><a href="#"><i class="fa-solid fa-basket-shopping"></i></a></li>
+                            <li><a href="#"><i class="fa-solid fa-eye"></i></a></li>
+                            <li><a href="#"><i class="fa-solid fa-heart"></i></a></li>
+                            <li><a href="#"><i class="fa-solid fa-arrow-right-arrow-left"></i></a></li>
                         </ul>
                     </div>
                 </div>
@@ -200,10 +200,10 @@
                     </div>
                     <div class="cart-right">
                         <ul class="icon-list">
-                            <li><a href=""><i class="fa-solid fa-basket-shopping"></i></a></li>
-                            <li><a href=""><i class="fa-solid fa-eye"></i></a></li>
-                            <li><a href=""><i class="fa-solid fa-heart"></i></a></li>
-                            <li><a href=""><i class="fa-solid fa-arrow-right-arrow-left"></i></a></li>
+                            <li><a href="#"><i class="fa-solid fa-basket-shopping"></i></a></li>
+                            <li><a href="#"><i class="fa-solid fa-eye"></i></a></li>
+                            <li><a href="#"><i class="fa-solid fa-heart"></i></a></li>
+                            <li><a href="#"><i class="fa-solid fa-arrow-right-arrow-left"></i></a></li>
                         </ul>
                     </div>
                 </div>
@@ -217,10 +217,10 @@
                     </div>
                     <div class="cart-right">
                         <ul class="icon-list">
-                            <li><a href=""><i class="fa-solid fa-basket-shopping"></i></a></li>
-                            <li><a href=""><i class="fa-solid fa-eye"></i></a></li>
-                            <li><a href=""><i class="fa-solid fa-heart"></i></a></li>
-                            <li><a href=""><i class="fa-solid fa-arrow-right-arrow-left"></i></a></li>
+                            <li><a href="#"><i class="fa-solid fa-basket-shopping"></i></a></li>
+                            <li><a href="#"><i class="fa-solid fa-eye"></i></a></li>
+                            <li><a href="#"><i class="fa-solid fa-heart"></i></a></li>
+                            <li><a href="#"><i class="fa-solid fa-arrow-right-arrow-left"></i></a></li>
                         </ul>
                     </div>
                 </div>
@@ -234,10 +234,10 @@
                     </div>
                     <div class="cart-right">
                         <ul class="icon-list">
-                            <li><a href=""><i class="fa-solid fa-basket-shopping"></i></a></li>
-                            <li><a href=""><i class="fa-solid fa-eye"></i></a></li>
-                            <li><a href=""><i class="fa-solid fa-heart"></i></a></li>
-                            <li><a href=""><i class="fa-solid fa-arrow-right-arrow-left"></i></a></li>
+                            <li><a href="#"><i class="fa-solid fa-basket-shopping"></i></a></li>
+                            <li><a href="#"><i class="fa-solid fa-eye"></i></a></li>
+                            <li><a href="#"><i class="fa-solid fa-heart"></i></a></li>
+                            <li><a href="#"><i class="fa-solid fa-arrow-right-arrow-left"></i></a></li>
                         </ul>
                     </div>
                 </div>
@@ -251,10 +251,10 @@
                     </div>
                     <div class="cart-right">
                         <ul class="icon-list">
-                            <li><a href=""><i class="fa-solid fa-basket-shopping"></i></a></li>
-                            <li><a href=""><i class="fa-solid fa-eye"></i></a></li>
-                            <li><a href=""><i class="fa-solid fa-heart"></i></a></li>
-                            <li><a href=""><i class="fa-solid fa-arrow-right-arrow-left"></i></a></li>
+                            <li><a href="#"><i class="fa-solid fa-basket-shopping"></i></a></li>
+                            <li><a href="#"><i class="fa-solid fa-eye"></i></a></li>
+                            <li><a href="#"><i class="fa-solid fa-heart"></i></a></li>
+                            <li><a href="#"><i class="fa-solid fa-arrow-right-arrow-left"></i></a></li>
                         </ul>
                     </div>
                 </div>
@@ -292,6 +292,132 @@
                 </div>
             </div>
         </div>
+        <!-- BRAND -->
+        <div class="brands">
+            <div class="container">
+                <ul>
+                    <li class="brand"><a href="#"><img src="assets/images/brand1.png" alt="#"></a></li>
+                    <li class="brand"><a href="#"><img src="assets/images/brand2.png" alt="#"></a></li>
+                    <li class="brand"><a href="#"><img src="assets/images/brand3.png" alt="#"></a></li>
+                    <li class="brand"><a href="#"><img src="assets/images/brand4.png" alt="#"></a></li>
+                    <li class="brand"><a href="#"><img src="assets/images/brand5.png" alt="#"></a></li>
+                    <li class="brand"><a href="#"><img src="assets/images/brand6.png" alt="#"></a></li>
+                </ul>
+            </div>
+        </div>
+        <!-- FOOTER -->
+        <footer>
+            <div class="footer">
+                <div class="footer-top">
+                    <div class="footer-logo">
+                        <img src="assets/images/logo.png" alt="">
+                    </div>
+                    <div class="footer-title">
+                        <p>Lorem Ipsum is simply dummied text of the printing and typesetting industry. Lorem Ipsum has been the <br> industry’s standard dummy text ever since the 1500s when an unknown printer took a galley of type</p>
+                    </div>
+                    <div class="footer-icons">
+                        <ul>
+                            <li><a href=""><i class="fa-brands fa-facebook-f"></i></a></li>
+                            <li><a href=""><i class="fa-brands fa-twitter"></i></a></li>
+                            <li><a href=""><i class="fa-brands fa-google-plus-g"></i></a></li>
+                            <li><a href=""><i class="fa-brands fa-youtube"></i></a></li>
+                        </ul>
+                    </div>
+                </div>
+                <!-- footer bottom -->
+                <div class="grid">
+                    <div class="grid_row">
+                        <div class="grid_colum">
+                            <h4 class="footer_heading">Contact us</h4>
+                            <div class="footer_list">
+                                <ul>
+                                    <li class="footer-item">
+                                        <a href="#" class="footer_item_link">
+                                            <i class="fa-solid fa-location-dot"></i>
+                                            200 Lincoln Ave, Salinas, CA 93901</a>
+                                    </li>
+                                    <li class="footer-item">
+                                        <a href="#" class="footer_item_link">
+                                            <i class="fa-solid fa-phone-flip"></i>
+                                            023 32423 223
+                                        </a>
+                                    </li>
+                                    <li class="footer-item">
+                                        <a href="#" class="footer_item_link">
+                                            <i class="fa-solid fa-envelope"></i>
+                                            gymax@example.com
+                                        </a>
+                                    </li>
+                                    <li class="footer-item">
+                                        <a href="#" class="footer_item_link">
+                                            <i class="fa-solid fa-clock"></i>
+                                            9:20-20:00 All day
+                                        </a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="grid_colum">
+                            <h4 class="footer_heading">My Account</h4>
+                            <div class="footer_list">
+                                <ul>
+                                    <li class="footer-item">
+                                        <a href="#" class="footer_item_link">My account</a>
+                                    </li>
+                                    <li class="footer-item">
+                                        <a href="#" class="footer_item_link">check out</a>
+                                    </li>
+                                    <li class="footer-item">
+                                        <a href="#" class="footer_item_link">register</a>
+                                    </li>
+                                    <li class="footer-item">
+                                        <a href="#" class="footer_item_link">Login</a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="grid_colum">
+                            <h4 class="footer_heading">Information</h4>
+                            <div class="footer_list">
+                                <ul>
+                                    <li class="footer-item">
+                                        <a href="#" class="footer_item_link">About us</a>
+                                    </li>
+                                    <li class="footer-item">
+                                        <a href="#" class="footer_item_link">Contact us</a>
+                                    </li>
+                                    <li class="footer-item">
+                                        <a href="#" class="footer_item_link">Terms of user</a>
+                                    </li>
+                                    <li class="footer-item">
+                                        <a href="#" class="footer_item_link">Privacy Policy</a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="grid_colum">
+                            <h4 class="footer_heading">Quick link</h4>
+                            <div class="footer_list">
+                                <ul>
+                                    <li class="footer-item">
+                                        <a href="#" class="footer_item_link">New user</a>
+                                    </li>
+                                    <li class="footer-item">
+                                        <a href="#" class="footer_item_link">Help center</a>
+                                    </li>
+                                    <li class="footer-item">
+                                        <a href="#" class="footer_item_link">Report spam</a>
+                                    </li>
+                                    <li class="footer-item">
+                                        <a href="#" class="footer_item_link">FAQs</a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </footer>
     </div>
 <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
 <script type="text/javascript" src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
