--- a/index.html
+++ b/index.html
@@ -417,6 +417,9 @@
                     </div>
                 </div>
             </div>
+            <div class="content-other">
+                <p>Copyright © 2019 Gymax - Design by ArrowHitech - All Rights Res</p>
+            </div>
         </footer>
     </div>
 <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
