--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     <div class="search-box">
                         <div class="searchToggle">
                             <i class="fa-solid fa-magnifying-glass search"></i>
-                            <i class="fa-solid fa-xmark cancel"></i>
+                            <!-- <i class="fa-solid fa-xmark cancel"></i> -->
                         </div>
                         
                         <div class="search-text">
@@ -275,18 +275,18 @@
                 <div class="client">
                     <div class="client-item">
                         <h2>See What They Said About Us</h2>
-                        <img src="assets/images/main.png" alt="">
-                        <p>"There are no shortcuts to becoming Hokage!"</p>
-                        <h3>naruto</h3>
+                        <img src="assets/images/client.png" alt="">
+                        <p>“Good services. I bought a bicycle with a wrong but they accept free return for me <br> and exchange a new product for me.</p>
+                        <h3>lina</h3>
                         <h5>Happy clients</p>
                     </div>
                 </div>
                 <div class="client">
                     <div class="client-item">
                         <h2>See What They Said About Us</h2>
-                        <img src="assets/images/duong.png" alt="">
-                        <p>"Death is like the wind; always by my side."</p>
-                        <h3>DuongYs</h3>
+                        <img src="assets/images/client.png" alt="">
+                        <p>“Good services. I bought a bicycle with a wrong but they accept free return for me <br> and exchange a new product for me.</p>
+                        <h3>lina</h3>
                         <h5>Happy clients</p>
                     </div>
                 </div>
