--- a/index.html
+++ b/index.html
@@ -118,6 +118,7 @@
                     </ul>
                 </div>
             </div>
+
             <div class="cart-list">
                 <div class="cart">
                     <img src="assets/images/col1-1.jpg" alt="" class="cart-image">
@@ -140,8 +141,8 @@
                     <img src="assets/images/col1-2.jpg" alt="" class="cart-image">
                     <div class="cart-content">
                         <div class="cart-info">
-                            <h4 class="cart-title">Body Champ Cardio</h4>
-                            <p class="cart-price">$342.00</p>
+                            <h4 class="cart-title">Body Solid GCEC340</h4>
+                            <p class="cart-price">$214.00</p>
                         </div>
                     </div>
                     <div class="cart-right">
@@ -157,8 +158,8 @@
                     <img src="assets/images/col1-3.jpg" alt="" class="cart-image">
                     <div class="cart-content">
                         <div class="cart-info">
-                            <h4 class="cart-title">Body Champ Cardio</h4>
-                            <p class="cart-price">$342.00</p>
+                            <h4 class="cart-title">Bowflex BXE116 Elliptical</h4>
+                            <p class="cart-price">$421.00</p>
                         </div>
                     </div>
                     <div class="cart-right">
@@ -174,8 +175,8 @@
                     <img src="assets/images/col1-4.jpg" alt="" class="cart-image">
                     <div class="cart-content">
                         <div class="cart-info">
-                            <h4 class="cart-title">Body Champ Cardio</h4>
-                            <p class="cart-price">$342.00</p>
+                            <h4 class="cart-title">ETHOS GHD</h4>
+                            <p class="cart-price">$152.00</p>
                         </div>
                     </div>
                     <div class="cart-right">
@@ -194,8 +195,8 @@
                     <img src="assets/images/col2-1.jpg" alt="" class="cart-image">
                     <div class="cart-content">
                         <div class="cart-info">
-                            <h4 class="cart-title">Body Champ Cardio</h4>
-                            <p class="cart-price">$342.00</p>
+                            <h4 class="cart-title">AFG Pro 7.2AI Incline</h4>
+                            <p class="cart-price">$252.00</p>
                         </div>
                     </div>
                     <div class="cart-right">
@@ -211,8 +212,8 @@
                     <img src="assets/images/col2-2.jpg" alt="" class="cart-image">
                     <div class="cart-content">
                         <div class="cart-info">
-                            <h4 class="cart-title">Body Champ Cardio</h4>
-                            <p class="cart-price">$342.00</p>
+                            <h4 class="cart-title">Weight Bench</h4>
+                            <p class="cart-price">$412.00</p>
                         </div>
                     </div>
                     <div class="cart-right">
@@ -228,8 +229,8 @@
                     <img src="assets/images/col2-3.jpg" alt="" class="cart-image">
                     <div class="cart-content">
                         <div class="cart-info">
-                            <h4 class="cart-title">Body Champ Cardio</h4>
-                            <p class="cart-price">$342.00</p>
+                            <h4 class="cart-title">ProForm Hiit Trainer Lite 5.9</h4>
+                            <p class="cart-price">$300.00</p>
                         </div>
                     </div>
                     <div class="cart-right">
@@ -245,8 +246,8 @@
                     <img src="assets/images/col2-4.jpg" alt="" class="cart-image">
                     <div class="cart-content">
                         <div class="cart-info">
-                            <h4 class="cart-title">Body Champ Cardio</h4>
-                            <p class="cart-price">$342.00</p>
+                            <h4 class="cart-title">Fitness Gear Pro</h4>
+                            <p class="cart-price">$124.00</p>
                         </div>
                     </div>
                     <div class="cart-right">
