--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
                             <!-- <i class="fa-solid fa-xmark cancel"></i> -->
                         </div>
                         
-                        <div class="search-text">
+                        <form action="" class="search-text">
                             <input type="text" placeholder="Search...">
                             <i class="fa-solid fa-magnifying-glass"></i>
-                        </div>
+                        </form>
                     </div>
                     
                     <div class="icons">
