--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Training</title>
     <link rel="stylesheet" href="assets/fonts/fontawesome-free-6.1.1-web/css/all.min.css">
+    <link rel="stylesheet" href="assets/css/grid.css">
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/> 
 </head>
@@ -22,6 +23,10 @@
                         <a href="#"><img src="assets/images/logo.png" alt=""></a>
                         <i class="fa-solid fa-xmark sliderbarClose"></i>
                     </div>
+                    <form action="" class="nav-search">
+                        <input type="text" placeholder="Search...">
+                        <i class="fa-solid fa-magnifying-glass"></i>
+                    </form>
                     <div class="nav-links">
                         <ul>
                             <li><a href="#">Home</a></li>
@@ -37,7 +42,6 @@
                     <div class="search-box">
                         <div class="searchToggle">
                             <i class="fa-solid fa-magnifying-glass search"></i>
-                            <!-- <i class="fa-solid fa-xmark cancel"></i> -->
                         </div>
                         
                         <form action="" class="search-text">
@@ -72,7 +76,7 @@
         <!-- CATEGORY PRODUCT -->
         <div class="category-product">
             <div class="container">
-
+                
                 <div class="dumbbells box-item">
                     <div class="category-product-top">
                         <img src="assets/images/category-img1.jpg" alt="">
@@ -95,7 +99,7 @@
                     </div>
                 </div>
 
-                <div class="power">
+                <div class="power box-item">
                     <div class="category-product-top">
                         <img src="assets/images/category-img3.jpg" alt="">
                     </div>
@@ -112,9 +116,9 @@
             <div class="tab-bar">
                 <div class="container">
                     <ul>
-                        <li><a href="#"><h5>Top Sellers</h5></a></li>
-                        <li><a href="#"><h5>Featured</h5></a></li>
-                        <li><a href="#"><h5>Most Reviews</h5></a></li>
+                        <li><h5 class="line_active"><a href="#">Top Sellers</a></h5></li>
+                        <li><h5 class="line_active"><a href="#">Featured</a></h5></li>
+                        <li><h5 class="line_active"><a href="#">Most Reviews</a></h5></li>
                     </ul>
                 </div>
             </div>
@@ -190,7 +194,7 @@
                 </div>
             </div>
             <!-- LIST_2 -->
-            <div class="cart-list two">
+            <div class="cart-list">
                 <div class="cart">
                     <img src="assets/images/col2-1.jpg" alt="" class="cart-image">
                     <div class="cart-content">
@@ -270,7 +274,7 @@
                         <img src="assets/images/client.png" alt="">
                         <p>“Good services. I bought a bicycle with a wrong but they accept free return for me <br> and exchange a new product for me.</p>
                         <h3>lina</h3>
-                        <h5>Happy clients</p>
+                        <h5>Happy clients</h5>
                     </div>
                 </div>
                 <div class="client">
@@ -279,7 +283,7 @@
                         <img src="assets/images/client.png" alt="">
                         <p>“Good services. I bought a bicycle with a wrong but they accept free return for me <br> and exchange a new product for me.</p>
                         <h3>lina</h3>
-                        <h5>Happy clients</p>
+                        <h5>Happy clients</h5>
                     </div>
                 </div>
                 <div class="client">
@@ -288,7 +292,7 @@
                         <img src="assets/images/client.png" alt="">
                         <p>“Good services. I bought a bicycle with a wrong but they accept free return for me <br> and exchange a new product for me.</p>
                         <h3>lina</h3>
-                        <h5>Happy clients</p>
+                        <h5>Happy clients</h5>
                     </div>
                 </div>
             </div>
@@ -326,9 +330,9 @@
                     </div>
                 </div>
                 <!-- footer bottom -->
-                <div class="grid">
-                    <div class="grid_row">
-                        <div class="grid_colum">
+                <div class="grid wide">
+                    <div class="row mt">
+                        <div class="col l-3 m-6 c-6">
                             <h4 class="footer_heading">Contact us</h4>
                             <div class="footer_list">
                                 <ul>
@@ -358,7 +362,7 @@
                                 </ul>
                             </div>
                         </div>
-                        <div class="grid_colum">
+                        <div class="col l-3 m-6 c-6">
                             <h4 class="footer_heading">My Account</h4>
                             <div class="footer_list">
                                 <ul>
@@ -377,7 +381,7 @@
                                 </ul>
                             </div>
                         </div>
-                        <div class="grid_colum">
+                        <div class="col l-3 m-6 c-6">
                             <h4 class="footer_heading">Information</h4>
                             <div class="footer_list">
                                 <ul>
@@ -396,7 +400,7 @@
                                 </ul>
                             </div>
                         </div>
-                        <div class="grid_colum">
+                        <div class="col l-3 m-6 c-6">
                             <h4 class="footer_heading">Quick link</h4>
                             <div class="footer_list">
                                 <ul>
@@ -419,7 +423,7 @@
                 </div>
             </div>
             <div class="content-other">
-                <p>Copyright © 2019 Gymax - Design by ArrowHitech - All Rights Res</p>
+                <p>Copyright © 2019 Gymax - Design by ArrowHitech - All Rights Reserved</p>
             </div>
         </footer>
     </div>
