--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                     <div class="category-product-top">
                         <img src="assets/images/category-img2.jpg" alt="">
                     </div>
-                    <div class="category-product-bottom box-item">
+                    <div class="category-product-bottom">
                         <img src="assets/images/category-icon2.png" alt="">
                         <h3>strength</h3>
                         <p>Lorem Ipsum is simply dummy text of the <br> printing and typesetting industry</p>
@@ -125,15 +125,13 @@
 
             <div class="cart-list">
                 <div class="cart">
-                    <img src="assets/images/col1-1.jpg" alt="" class="cart-image">
                     <div class="cart-content">
-                        <div class="cart-info">
-                            <h4 class="cart-title">Body Champ Cardio</h4>
-                            <p class="cart-price">$342.00</p>
-                        </div>
+                        <img src="assets/images/col1-1.jpg" alt="">
+                        <h4 class="cart-title">Body Champ Cardio</h4>
+                        <p class="cart-price">$342.00</p>
                     </div>
                     <div class="cart-right">
-                        <ul class="icon-list">
+                        <ul>
                             <li><a href="#"><i class="fa-solid fa-basket-shopping"></i></a></li>
                             <li><a href="#"><i class="fa-solid fa-eye"></i></a></li>
                             <li><a href="#"><i class="fa-solid fa-heart"></i></a></li>
@@ -142,15 +140,13 @@
                     </div>
                 </div>
                 <div class="cart">
-                    <img src="assets/images/col1-2.jpg" alt="" class="cart-image">
                     <div class="cart-content">
-                        <div class="cart-info">
-                            <h4 class="cart-title">Body Solid GCEC340</h4>
-                            <p class="cart-price">$214.00</p>
-                        </div>
+                        <img src="assets/images/col1-2.jpg" alt="">
+                        <h4 class="cart-title">Body Solid GCEC340</h4>
+                        <p class="cart-price">$214.00</p>
                     </div>
                     <div class="cart-right">
-                        <ul class="icon-list">
+                        <ul>
                             <li><a href="#"><i class="fa-solid fa-basket-shopping"></i></a></li>
                             <li><a href="#"><i class="fa-solid fa-eye"></i></a></li>
                             <li><a href="#"><i class="fa-solid fa-heart"></i></a></li>
@@ -159,15 +155,13 @@
                     </div>
                 </div>
                 <div class="cart">
-                    <img src="assets/images/col1-3.jpg" alt="" class="cart-image">
                     <div class="cart-content">
-                        <div class="cart-info">
-                            <h4 class="cart-title">Bowflex BXE116 Elliptical</h4>
-                            <p class="cart-price">$421.00</p>
-                        </div>
+                        <img src="assets/images/col1-3.jpg" alt="">
+                        <h4 class="cart-title">Bowflex BXE116 Elliptical</h4>
+                        <p class="cart-price">$421.00</p>
                     </div>
                     <div class="cart-right">
-                        <ul class="icon-list">
+                        <ul>
                             <li><a href="#"><i class="fa-solid fa-basket-shopping"></i></a></li>
                             <li><a href="#"><i class="fa-solid fa-eye"></i></a></li>
                             <li><a href="#"><i class="fa-solid fa-heart"></i></a></li>
@@ -176,15 +170,13 @@
                     </div>
                 </div>
                 <div class="cart">
-                    <img src="assets/images/col1-4.jpg" alt="" class="cart-image">
                     <div class="cart-content">
-                        <div class="cart-info">
-                            <h4 class="cart-title">ETHOS GHD</h4>
-                            <p class="cart-price">$152.00</p>
-                        </div>
+                        <img src="assets/images/col1-4.jpg" alt="">
+                        <h4 class="cart-title">ETHOS GHD</h4>
+                        <p class="cart-price">$152.00</p>
                     </div>
                     <div class="cart-right">
-                        <ul class="icon-list">
+                        <ul>
                             <li><a href="#"><i class="fa-solid fa-basket-shopping"></i></a></li>
                             <li><a href="#"><i class="fa-solid fa-eye"></i></a></li>
                             <li><a href="#"><i class="fa-solid fa-heart"></i></a></li>
@@ -192,19 +184,14 @@
                         </ul>
                     </div>
                 </div>
-            </div>
-            <!-- LIST_2 -->
-            <div class="cart-list">
-                <div class="cart">
-                    <img src="assets/images/col2-1.jpg" alt="" class="cart-image">
+                <div class="cart two">
                     <div class="cart-content">
-                        <div class="cart-info">
-                            <h4 class="cart-title">AFG Pro 7.2AI Incline</h4>
-                            <p class="cart-price">$252.00</p>
-                        </div>
+                        <img src="assets/images/col2-1.jpg" alt="">
+                        <h4 class="cart-title">AFG Pro 7.2AI Incline</h4>
+                        <p class="cart-price">$252.00</p>
                     </div>
                     <div class="cart-right">
-                        <ul class="icon-list">
+                        <ul>
                             <li><a href="#"><i class="fa-solid fa-basket-shopping"></i></a></li>
                             <li><a href="#"><i class="fa-solid fa-eye"></i></a></li>
                             <li><a href="#"><i class="fa-solid fa-heart"></i></a></li>
@@ -212,16 +199,14 @@
                         </ul>
                     </div>
                 </div>
-                <div class="cart">
-                    <img src="assets/images/col2-2.jpg" alt="" class="cart-image">
+                <div class="cart two">
                     <div class="cart-content">
-                        <div class="cart-info">
-                            <h4 class="cart-title">Weight Bench</h4>
-                            <p class="cart-price">$412.00</p>
-                        </div>
+                        <img src="assets/images/col2-2.jpg" alt="">
+                        <h4 class="cart-title">Weight Bench</h4>
+                        <p class="cart-price">$412.00</p>
                     </div>
                     <div class="cart-right">
-                        <ul class="icon-list">
+                        <ul>
                             <li><a href="#"><i class="fa-solid fa-basket-shopping"></i></a></li>
                             <li><a href="#"><i class="fa-solid fa-eye"></i></a></li>
                             <li><a href="#"><i class="fa-solid fa-heart"></i></a></li>
@@ -229,16 +214,14 @@
                         </ul>
                     </div>
                 </div>
-                <div class="cart">
-                    <img src="assets/images/col2-3.jpg" alt="" class="cart-image">
+                <div class="cart two">
                     <div class="cart-content">
-                        <div class="cart-info">
-                            <h4 class="cart-title">ProForm Hiit Trainer Lite 5.9</h4>
-                            <p class="cart-price">$300.00</p>
-                        </div>
+                        <img src="assets/images/col2-3.jpg" alt="">
+                        <h4 class="cart-title">ProForm Hiit Trainer Lite 5.9</h4>
+                        <p class="cart-price">$300.00</p>
                     </div>
                     <div class="cart-right">
-                        <ul class="icon-list">
+                        <ul>
                             <li><a href="#"><i class="fa-solid fa-basket-shopping"></i></a></li>
                             <li><a href="#"><i class="fa-solid fa-eye"></i></a></li>
                             <li><a href="#"><i class="fa-solid fa-heart"></i></a></li>
@@ -246,16 +229,14 @@
                         </ul>
                     </div>
                 </div>
-                <div class="cart">
-                    <img src="assets/images/col2-4.jpg" alt="" class="cart-image">
+                <div class="cart two">
                     <div class="cart-content">
-                        <div class="cart-info">
-                            <h4 class="cart-title">Fitness Gear Pro</h4>
-                            <p class="cart-price">$124.00</p>
-                        </div>
+                        <img src="assets/images/col2-4.jpg" alt="">
+                        <h4 class="cart-title">Fitness Gear Pro</h4>
+                        <p class="cart-price">$124.00</p>
                     </div>
                     <div class="cart-right">
-                        <ul class="icon-list">
+                        <ul>
                             <li><a href="#"><i class="fa-solid fa-basket-shopping"></i></a></li>
                             <li><a href="#"><i class="fa-solid fa-eye"></i></a></li>
                             <li><a href="#"><i class="fa-solid fa-heart"></i></a></li>
